<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_black"
    tools:context=".ui.profile.ProfileFragment">


  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <androidx.core.widget.NestedScrollView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent">

          <androidx.constraintlayout.widget.ConstraintLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent">

              <ImageView
                  android:id="@+id/imageView3"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:scaleType="centerCrop"
                  android:src="@drawable/image_test"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent" />

              <androidx.constraintlayout.widget.ConstraintLayout
                  android:id="@+id/constraintLayout2"
                  android:layout_width="105dp"
                  android:layout_height="105dp"

                  android:layout_marginStart="16dp"
                  android:layout_marginTop="190dp"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent">

                  <androidx.cardview.widget.CardView
                      android:layout_width="100dp"
                      android:layout_height="100dp"
                      app:cardCornerRadius="@dimen/dp_100"
                      app:layout_constraintBottom_toBottomOf="parent"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toTopOf="parent">

                      <ImageView
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:scaleType="center"
                          android:src="@drawable/image_test" />
                  </androidx.cardview.widget.CardView>
              </androidx.constraintlayout.widget.ConstraintLayout>

              <androidx.constraintlayout.widget.ConstraintLayout
                  android:id="@+id/constraintLayout3"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="16dp"
                  android:orientation="horizontal"
                  app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
                  app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
                  app:layout_constraintTop_toBottomOf="@+id/imageView3">

                  <androidx.cardview.widget.CardView
                      android:id="@+id/cardView3"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:cardCornerRadius="@dimen/dp_100"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toTopOf="parent">

                      <ImageView
                          android:layout_width="@dimen/dp_24"
                          android:layout_height="@dimen/dp_24"
                          android:scaleType="fitXY"
                          android:src="@drawable/image_test" />
                  </androidx.cardview.widget.CardView>

                  <androidx.cardview.widget.CardView
                      android:id="@+id/cardView4"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginStart="12dp"
                      app:cardCornerRadius="@dimen/dp_100"
                      app:layout_constraintStart_toStartOf="@+id/cardView3"
                      app:layout_constraintTop_toTopOf="parent">

                      <ImageView
                          android:layout_width="@dimen/dp_24"
                          android:layout_height="@dimen/dp_24"
                          android:scaleType="fitXY"
                          android:src="@drawable/image_test" />
                  </androidx.cardview.widget.CardView>

                  <androidx.cardview.widget.CardView
                      android:id="@+id/cardView5"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginStart="12dp"
                      app:cardCornerRadius="@dimen/dp_100"
                      app:layout_constraintStart_toStartOf="@+id/cardView4"
                      app:layout_constraintTop_toTopOf="parent">

                      <ImageView
                          android:layout_width="@dimen/dp_24"
                          android:layout_height="@dimen/dp_24"
                          android:scaleType="fitXY"
                          android:src="@drawable/image_test" />
                  </androidx.cardview.widget.CardView>

                  <androidx.cardview.widget.CardView
                      android:id="@+id/cardView6"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginStart="12dp"
                      app:cardCornerRadius="@dimen/dp_100"
                      app:layout_constraintStart_toEndOf="@+id/cardView3"
                      app:layout_constraintTop_toTopOf="parent">

                      <ImageView
                          android:layout_width="@dimen/dp_24"
                          android:layout_height="@dimen/dp_24"
                          android:scaleType="fitXY"
                          android:src="@drawable/image_test" />
                  </androidx.cardview.widget.CardView>

              </androidx.constraintlayout.widget.ConstraintLayout>

              <TextView
                  android:id="@+id/textView7"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="8dp"
                  android:text="278 Friends"
                  android:textColor="@color/white"
                  android:textSize="@dimen/sp_16"
                  app:layout_constraintBottom_toBottomOf="@+id/constraintLayout3"
                  app:layout_constraintStart_toEndOf="@+id/constraintLayout3"
                  app:layout_constraintTop_toTopOf="@+id/constraintLayout3" />

              <ImageView
                  android:id="@+id/imageButton"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginEnd="16dp"
                  android:src="@drawable/more_horizontal"
                  app:layout_constraintBottom_toBottomOf="@+id/textView7"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintTop_toTopOf="@+id/textView7" />

              <TextView
                  android:id="@+id/textView8"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="16dp"
                  android:text="User Name"
                  android:textColor="@color/white"
                  app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
                  app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

              <TextView
                  android:id="@+id/textView9"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="8dp"
                  android:shadowColor="@color/white"
                  android:text="12/10/2023"
                  android:textSize="@dimen/sp_12"
                  app:layout_constraintStart_toStartOf="@+id/textView8"
                  app:layout_constraintTop_toBottomOf="@+id/textView8" />

              <LinearLayout
                  android:id="@+id/linearLayout5"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="16dp"
                  android:background="@drawable/border_liner"
                  android:orientation="vertical"
                  android:padding="@dimen/dp_10"
                  app:layout_constraintEnd_toEndOf="@+id/imageButton"
                  app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
                  app:layout_constraintTop_toBottomOf="@+id/textView8">

                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/introduce"
                      android:textColor="@color/white"
                      android:textSize="@dimen/dp_16"
                      android:textStyle="bold" />

                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:paddingVertical="@dimen/dp_10"
                      android:text="@string/lorem_ipsum_dolor_dolor_dolor_dolor_dolor_dolor_dolor_dolor_dolor_dolor_dolor_dolor_sit_amet_consectetu"
                      android:textColor="@color/white" />

                  <View
                      android:id="@+id/border_view"
                      android:layout_width="match_parent"
                      android:layout_height="2dp"
                      android:background="@color/light_black" />

                  <LinearLayout
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:orientation="horizontal"
                      android:paddingVertical="10dp">

                      <ImageView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:src="@drawable/material_symbols_work_sharp" />

                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_marginLeft="@dimen/dp_8"
                          android:text="@string/officer"
                          android:textColor="@color/white" />
                  </LinearLayout>

                  <LinearLayout
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:orientation="horizontal">

                      <ImageView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:src="@drawable/ph_gender_intersex_bold" />

                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_marginLeft="@dimen/dp_8"
                          android:text="@string/female"
                          android:textColor="@color/white" />
                  </LinearLayout>

                  <LinearLayout
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:orientation="horizontal"
                      android:paddingVertical="@dimen/dp_10">

                      <ImageView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:src="@drawable/vector" />

                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_marginLeft="@dimen/dp_8"
                          android:text="@string/manga_action_mystery"
                          android:textColor="@color/white" />
                  </LinearLayout>

                  <LinearLayout
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:orientation="horizontal">

                      <ImageView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:src="@drawable/jam_birthday_cake_f" />

                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_marginLeft="@dimen/dp_8"
                          android:text="@string/_12_10_1998"
                          android:textColor="@color/white" />
                  </LinearLayout>
              </LinearLayout>

              <androidx.recyclerview.widget.RecyclerView
                  android:id="@+id/recycleview"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:nestedScrollingEnabled="false"
                  app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />
          </androidx.constraintlayout.widget.ConstraintLayout>
      </androidx.core.widget.NestedScrollView>
  </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>